feat: unit testing

--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
 spring.datasource.username=user
 spring.datasource.password=user123
 server.servlet.context-path=/api
-info.app.name=whatever
-info.app.description=ahahahtest
+info.app.name=userapi
+info.app.description=userapi
 info.app.version=0.0.1
+server.tomcat.threads.max=1
